--- a/package.json
+++ b/package.json
@@ -1,12 +1,30 @@
 {
   "name": "tarrot7",
-  "version": "1.0.0",
   "private": true,
-  "description": "Minimal static app for Firebase Hosting GitHub deploy",
-  "scripts": {
-    "build": "mkdir -p dist && cp index.html dist/index.html"
-  },
+  "version": "0.0.0",
   "engines": {
-    "node": ">=18"
+    "node": ">=20"
+  },
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.39.1",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
+    "@vitejs/plugin-react": "^5.1.1",
+    "eslint": "^9.39.1",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "eslint-plugin-react-refresh": "^0.4.24",
+    "globals": "^16.5.0",
+    "vite": "^7.3.1"
   }
 }
